# ATMTree

./: README.md  environment.yml  pyproject.toml
atm_tree_builder/: config.py  data_structures.py  generation.py  search.py  tree_builder.py
atm_tree_builder/clustering/: aggregation.py  lsh.py  refinement.py
atm_tree_builder/utils/: math_ops.py
data/: atm_tree.gv  atm_tree.pkl  corpus_contexts.pkl  corpus_embeddings.npy  test_atm_tree.gv  test_atm_tree.pkl  test_corpus_content_embeddings.npy  test_corpus_contexts.pkl  test_corpus_retrieval_embeddings.npy
overall_guidance/: GUIDANCE.md  GUIDANCE_zh.md  Project Structure Blueprint.txt  Software Development Plan.txt
overall_guidance/papers/: ATMTree.tex.txt  RankRAG.tex.txt
scripts/: analyze_tree.py  run_experiment.py  visualize_tree.py
tests/: make_dummy_data.py  test_debug_tree.py  test_math_ops.py  test_tree_builder.py  test_tree_logic.py
